# gain

./: Cargo.toml  README.md  gain.toml
gain-arduino/: Cargo.toml  README.md  Ravedude.toml
gain-arduino/src/: main.rs
gain-bin/: Cargo.toml
gain-bin/src/: config.rs  main.rs  volume.rs
gain-lib/: Cargo.toml
gain-lib/src/: lib.rs
