[package]
name = "gain-bin"
version = "0.1.0"
edition = "2024"

[dependencies]
serialport = "4.8.1"
gain-lib = { path = "../gain-lib" }
postcard = "1.1.3"
serde = { version = "1.0", default-features = false, features = ["derive"] }
toml = "0.8"
log = { version = "0.4.28", features = ["release_max_level_info"] }
pretty_env_logger = "0.5.0"
anyhow = "1.0.100"

[dependencies.windows]
version = "0.58.0"
features = [
    "Win32_Foundation",
    "Win32_System_Com",
    "Win32_System_Threading",
    "Win32_System_ProcessStatus",
    "Win32_Media_Audio",
    "Win32_Media_Audio_Endpoints",
    "Win32_UI_WindowsAndMessaging", # Needed for GetForegroundWindow
]
